Add lookup discord command

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.17.11",
     "mysql2": "^1.6.1",
     "sequelize": "^4.39.0",
-    "sqlite": "^3.0.0"
+    "sqlite": "^3.0.0",
+    "steamid": "^1.1.0"
   }
 }
