--- a/config.json
+++ b/config.json
@@ -1,9 +1,15 @@
 {
+    "serverName": "CSGO Server",
     "discordBot": {
         "enabled": true,
         "prefix": "!",
         "owner": "220554523561820160",
         "minimumKillsBeforeStatsCalc": "20",
         "stats_showMedals": false
+    },
+
+    "webserver": {
+        "enabled": true,
+        "port": 8080
     }
 }
