--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "discord.js": "^11.4.2",
     "discord.js-commando": "^0.10.0",
     "dotenv": "^6.1.0",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
     "mysql2": "^1.6.1",
