Add tests for web API

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Integrates RankMe data in MySQL to Discord",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/mocha test/**/*.test.js --exit",
     "docs": "jsdoc src -r -t node_modules/docdash"
   },
   "author": "",
@@ -22,10 +22,13 @@
     "steamid": "^1.1.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "coveralls": "^3.0.3",
     "docdash": "^1.1.0",
+    "faker": "^4.1.0",
     "jsdoc": "^3.5.5",
     "mocha": "^6.0.2",
-    "nyc": "^13.3.0"
+    "nyc": "^13.3.0",
+    "supertest": "^4.0.2"
   }
 }
