Add MySQL service to travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: node_js
 node_js:
   - "lts/*"
+services:
+  - mysql
 
+before_install:
+  - mysql -e 'CREATE DATABASE csgo;'
+  
 before_script:
   - npm install
 
