--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "cron": "^1.7.0",
     "discord.js": "^11.4.2",
     "discord.js-commando": "^0.10.0",
-    "dotenv": "^6.1.0",
+    "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
     "mysql2": "^1.6.1",
-    "sequelize": "^4.39.0",
+    "sequelize": "5.3.3",
     "sqlite": "^3.0.0",
     "steamid": "^1.1.0"
   },
@@ -29,7 +29,7 @@
     "docdash": "^1.1.0",
     "faker": "^4.1.0",
     "jsdoc": "^3.5.5",
-    "mocha": "^6.0.2",
+    "mocha": "^6.1.3",
     "nyc": "^13.3.0",
     "supertest": "^4.0.2"
   }
