Historical data collection & bug fixes (#9)
* Basic hook implementation

* Ci/cd (#5)

* Add docs script

* Refactor web api into separate class

* Refactor discordBot into separate class

* Add tests for web API

* Add test coverage reporting

* Add MySQL service to travis config

* Fix lcov reporter for test coverage

* Add basic tests for discord commands

* remove brittle test

* Only run the coverage script as that also runs test

* Test argument validation for lookup command

* Refactor lookup test

* Add basic test for historicalInfo#gatherData

* Use cron syntax for historicalData

* Basic score chart on player profile

* Clean up travis for auto releases

* Update dependencies

* Fixes #6 - rename image files to lowercase

* Add icons to navbar

* Fix ct/t wins chart to use correct data

* Sensible defaults for historicalData config

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "serverName": "CSGO Server",
+    "logSQL": false,
     "discordBot": {
         "enabled": true,
         "prefix": "!",
@@ -7,9 +8,14 @@
         "minimumKillsBeforeStatsCalc": "20",
         "stats_showMedals": false
     },
-
     "webserver": {
         "enabled": true,
         "port": 8080
+    },
+    "historicalData": {
+        "enabled": true,
+        "intervalCron": "0 0 * * *",
+        "keepDataForMs": 2678400000,
+        "tableName": "historicalData"
     }
 }
