--- a/package.json
+++ b/package.json
@@ -1,23 +1,36 @@
 {
-  "name": "rankme-discord",
+  "name": "rankme-stats",
   "version": "1.0.0",
   "description": "Integrates RankMe data in MySQL to Discord",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha test/**/*.test.js --exit",
+    "docs": "jsdoc src -r -t node_modules/docdash",
+    "test:cover": "nyc --report-dir ./coverage --reporter=lcov --reporter=text-summary node_modules/mocha/bin/_mocha --exit"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cron": "^1.7.0",
     "discord.js": "^11.4.2",
     "discord.js-commando": "^0.10.0",
-    "dotenv": "^6.1.0",
+    "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
     "mysql2": "^1.6.1",
-    "sequelize": "^4.39.0",
+    "sequelize": "5.3.3",
     "sqlite": "^3.0.0",
     "steamid": "^1.1.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "coveralls": "^3.0.3",
+    "docdash": "^1.1.0",
+    "faker": "^4.1.0",
+    "jsdoc": "^3.5.5",
+    "mocha": "^6.1.3",
+    "nyc": "^13.3.0",
+    "supertest": "^4.0.2"
   }
 }
