--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "figlet": "^1.2.1",
     "lodash": "^4.17.11",
+    "morgan": "^1.9.1",
     "mysql2": "^1.6.1",
     "sequelize": "5.3.3",
     "sqlite": "^3.0.0",
-    "steamid": "^1.1.0"
+    "steamid": "^1.1.0",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
