--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "./node_modules/.bin/mocha test/**/*.test.js --exit",
     "docs": "jsdoc src -r -t node_modules/docdash",
-    "test:cover": "nyc --report-dir ./coverage --reporter=lcov --reporter=text-summary node_modules/mocha/bin/_mocha --exit"
+    "test:cover": "nyc --report-dir ./coverage --reporter=lcov --reporter=text-summary node_modules/mocha/bin/_mocha --exit",
+    "start": "node src/index.js"
   },
   "author": "Catalysm",
   "license": "ISC",
