--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -44,4 +44,6 @@ jobs:
           MYSQL_HOST: mysql
           MYSQL_PASSWORD: mysecretpasswordissosecure
           MYSQL_USER: "csgo-rankme"
+          TEST_DISCORD_CHANNEL: ${{secrets.TEST_DISCORD_CHANNEL}}
+          DISCORD_TOKEN: ${{secrets.DISCORD_TOKEN}}
       - uses: codecov/codecov-action@v1
