--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,7 +19,7 @@ jobs:
           MYSQL_PASSWORD: "mysecretpasswordissosecure"
         ports:
           - 3306:3306
-        options: --health-cmd='mysqladmin ping'
+        options: --health-cmd 'mysqladmin ping'
 
     steps:
       - uses: actions/checkout@v2
