--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,7 +19,7 @@ jobs:
           MYSQL_PASSWORD: "mysecretpasswordissosecure"
         ports:
           - 3306:3306
-        options: --health-cmd 'mysqladmin ping'
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
       - uses: actions/checkout@v2
