--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "figlet": "^1.2.1",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "morgan": "^1.9.1",
     "mysql2": "^1.6.1",
-    "sequelize": "5.3.3",
-    "sqlite": "^3.0.0",
+    "sequelize": "5.15.1",
+    "sqlite": "^3.0.6",
+    "sqlite3": "^4.2.0",
     "steamid": "^1.1.0",
     "winston": "^3.2.1"
   },
@@ -32,7 +33,7 @@
     "coveralls": "^3.0.3",
     "docdash": "^1.1.0",
     "faker": "^4.1.0",
-    "jsdoc": "^3.5.5",
+    "jsdoc": "^3.6.4",
     "mocha": "^6.1.3",
     "nyc": "^13.3.0",
     "supertest": "^4.0.2"
